--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "random-quote-machine-react",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -11,7 +11,10 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://gitname.github.io/random-quote-machine-react",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build:css": "postcss src/css/main.css -o src/index.css",
     "watch:css": "postcss src/css/main.css -o src/index.css -w",
     "start": "npm-run-all -p watch:css start-js",
@@ -42,6 +45,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "cssnano": "^5.1.0",
+    "gh-pages": "^3.2.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^9.1.0",
     "postcss-nested": "^5.0.6",
