--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,14 @@
             "name": "Launch Edge against localhost",
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}"
+        },
+        {
+            "name": "iOS Web",
+            "type": "chrome",
+            "request": "attach",
+            "port": 9000,
+            "url": "http://localhost:3000/*",
+            "webRoot": "${workspaceRoot}/src"
         }
     ]
 }
