--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "gh-pages": "^3.2.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^9.1.0",
-    "postcss-nested": "^5.0.6",
-    "react-granim": "^1.1.0"
+    "postcss-nested": "^5.0.6"
   }
 }
